<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_sort_order"
        android:icon="@drawable/ic_action_sort"
        android:orderInCategory="100"
        android:title="@string/action_sort_order"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_order_popularity"
                    android:title="@string/sort_popularity"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/sort_order_rating"
                    android:title="@string/sort_rating"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/sort_order_favorites"
                    android:title="@string/sort_favorites"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>
</menu>
