<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/retry_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/retry"
        android:visibility="gone" />

    <TextView
        android:id="@+id/error_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/retry_button"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/loading_error"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:visibility="gone" />

    <TextView
        android:id="@+id/empty_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/empty_favorites"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/margin_small"
        android:paddingLeft="@dimen/margin_tiny"
        android:paddingRight="@dimen/margin_tiny"
        android:paddingTop="@dimen/margin_small"
        android:visibility="gone" />
</RelativeLayout>